# finansal-analiz-sistemi

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  15.csv  BRANCH_AUDIT.md  BRANCH_CLEANUP.md  Bist 100 Tarihsel Veriler13.xlsx  CHANGELOG.md  CHANGE_POLICY.md  DUMMY.md  DUPLICATE_AUDIT.md  Dockerfile  FAQ.md  FIX_REPORT.md  LICENSE  Makefile  RAPOR.md  README.md  README_COLAB.md  README_STAGE1.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  SCOPE_STAGE1.md  SUMMARY.md  TROUBLESHOOT.md  USAGE.md  all_files.txt  analyse_missing.py  backtest_core.py  cache_build_log.txt  cache_builder.py  config.py  config.yml  config_loader.py  config_local.py  config_resolver.py  config_scan.yml  conftest.py  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  pull_request_template.md
Veri/: BIST.xlsx  Bist 100 Tarihsel Veriler13.xlsx
Veri Dosyaları Her Sheet Bir Hisse/: Ben Kimim.docx  CHATGPT YENİ SAYFA PRONTU.docx  SENDEN (YAPAY ZEKADAN) FİNANSAL BEKLENTİLERİM.docx  SENDEN (YAPAY ZEKADAN) KİŞİSEL BEKLENTİLERİM.docx
backtest/: __init__.py  backtester.py  benchmark.py  calendars.py  cli.py  columns.py  config.py  cross.py  crossovers.py  data_loader.py  deprecations.py  eval_env.py  expr.py  filters_cleanup.py  filters_compile.py  filters_io.py  indicators.py  logging_conf.py  logging_utils.py  naming.py  normalizer.py  paths.py  performance.py  preflight.py  query_parser.py  report.py  reporter.py  screener.py  utils.py  validator.py
benchmarks/: README.md  benchmark.py  benchmark_output.txt  compare_speed.py
config/: __init__.py  colab_config.yaml  colab_config.yaml.example  costs.yaml  crossovers_config.py  data.yaml  filters_config.py  paths_config.py  portfolio.yaml  risk.yaml  settings.py  strategies.yaml  tune.yaml
contracts/: data_quality.yaml
data/: BIST.xlsx  alias_mapping.csv
docs/: ALIAS_POLICY.md  COLAB_REHBERI.md  canonical_names.md  cli_spec.md  colab.md  config_example.yaml  dsl_spec.md  filters.md  logging_trace_spec.md  normalize_spec.md  perf_notes.md  precompute_plan.md  reporting_excel_spec.md  run_batch_design.md  summary_spec.md  triage.md  validation_plan.md
examples/: example_config.yaml  example_filters_module.yml  example_readme_scenarios.md  filters.csv  holidays_tr.csv
filters/: __init__.py  io_filters.py  module_loader.py
finansal/: __init__.py  cli.py  parquet_cache.py  utils.py
finansal_analiz_sistemi/: __init__.py  __main__.py  cli.py  config.py  data_loader.py  error_list.py  log_tools.py  logging_config.py  logging_utils.py  main.py  report_generator.py  report_utils.py  report_writer.py  run.py  settings_loader.py
gui/: app.py
lib/: __init__.py  validator.py
notebooks/: 00_colab_bootstrap.py  colab_setup.py
raporlar/: openbb_vs_pandasta.txt
scripts/: check_requirements_consistency.py  install.sh  lock_requirements.sh  openbb_pandasta_compare.py
src/: __init__.py  kontrol_araci.py  locking.py  logging_config.py  preprocessor.py
tests/: __init__.py  conftest.py  test_aciklama_filled.py  test_alias_normalization.py  test_ambiguous_truth.py  test_auto_columns.py  test_backtest_core.py  test_backtest_core_extra.py  test_backtest_core_param.py  test_backtest_imports.py  test_backtest_sebep_kodu.py  test_backtester.py  test_backtester_validation.py  test_batch_runner.py  test_benchmark_alias.py  test_benchmark_delimiter.py  test_benchmark_legacy_config.py  test_benchmark_loader.py  test_benchmark_paths.py  test_bist_summary.py  test_build_solution.py  test_cache.py  test_calendar.py  test_calendars_validation.py  test_cli_empty.py  test_cli_events_log.py  test_cli_flags.py  test_cli_help.py  test_cli_integration.py  test_cli_output.py  (+183 more)
(+240 files in other folders)
