[project]
name = "finansal-analiz-sistemi"
version = "0.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -ra"
