[project]
name = "finansal-analiz-sistemi"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas==2.2.2",
    "pandas-ta==0.3.14b0",
    "numpy==2.0.2",
    "click",
    "loguru",
    "pandera",
    "pydantic",
    "pyarrow",
    "openpyxl",
    "xlsxwriter",
    "xlrd",
    "tqdm",
    "python-dateutil",
    "PyYAML",
    "polars",
    "typing-inspect",
    "jinja2",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "black",
    "ruff",
    "flake8",
    "mypy",
    "pip-tools",
]
colab = [
    "click",
    "loguru",
    "pandera",
    "pydantic",
    "pyarrow",
    "openpyxl",
    "xlsxwriter",
    "xlrd",
    "tqdm",
    "python-dateutil",
    "PyYAML",
    "polars",
    "typing-inspect",
    "jinja2",
]
cv = [
    "opencv-python-headless",
]

[tool.setuptools.packages.find]
include = ["backtest", "tests_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -ra"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
