[metadata]
name = finansal-analiz-sistemi
version = 0.0.1
description = Backtest ve analiz aracı

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.11
install_requires =
    cachetools>=5.3,<6.0
    click>=8.1
    kaleido>=0.2
    numpy>=1.25
    openpyxl>=3.1.2
    pandas>=2.2
    pandas-ta>=0.3.14b0
    portalocker>=2.8
    psutil>=5.9
    pyarrow>=16
    pyyaml>=6
    xlsxwriter>=3.1

[options.packages.find]
exclude =
    tests
    tests.*
where = src
